[package]
name = "snapcraft-rust-example"
version = "0.4.1"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "Test application for snapcraft rust library."
rust-version = "1.58"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/snapcraft/tree/main/snapcraft-rust-example"
homepage = "https://github.com/a1ecbr0wn/snapcraft/tree/main/snapcraft-rust-example"
readme = "README.md"
keywords = ["shell", "filesystem", "utility"]
categories = ["filesystem", "os", "api-bindings"]

[[bin]]
path = "src/main.rs"
name = "snapcraft-rust-example"

[dependencies]
snapcraft = { path = "../snapcraft", version = "0.4.1" }
